objects/ASI_CRM_CN_Brand_Group__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Brand_Group_Code__c</fullName>
        <label>Brand Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence2__c</fullName>
        <label>Order Form Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Brand Group</label>
    <listViews>
        <fullName>ASI_CRM_CN_Brand_Group</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Brand_Group_Code__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_CN_English_Name__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Brand_Group__c.ASI_CRM_CN_Brand_Group</value>
        </filters>
        <label>CN Brand Group</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KR_Brand_Group</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Brand_Group_Code__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Brand_Group__c.ASI_MFM_KR_Brand_Group</value>
        </filters>
        <label>KR Brand Group</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Brand Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Groups</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Brand_Group</fullName>
        <active>true</active>
        <label>CN Brand Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Brand_Group</fullName>
        <active>true</active>
        <label>KR Brand Group</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>